.history/k8s/frontend-users-api-ingress_20250524045839.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-users-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /api/users/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 3000
